--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -124,7 +124,11 @@
           <%= image_tag item.image, class: "item-img" %>
 
           <div class='sold-out'>
-            <!--<span>Sold Out!!</span>-->
+            <% @purchases.each do |purchase| %>
+              <% if item.id == purchase.item.id %>
+                <span>Sold Out!!</span>
+              <% end %>
+            <% end %>
           </div>
 
         </div>
