サーバーサイド実装

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -120,8 +120,10 @@
       <% @items.each do |item| %>
       <li class='list'>
         <%= link_to item_path(item.id) do %>
-        <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img" %>
+        <div class='item-img-content'> 
+          <% item.images.each do |image|%>
+            <%= image_tag image, class: "images" %>
+          <% end %>
 
           <div class='sold-out'>
               <% if item.purchase != nil %>
