--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,7 +6,9 @@
       <%= @item.product %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.image ,class:"item-box-img" %>
+    <% @item.images.each do |image| %>
+      <%= image_tag image, class:"item-box-img" %>
+    <% end %>
       
       <div class="sold-out">
           <% if @item.purchase != nil %>
