--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -6,7 +6,9 @@
       購入内容の確認
     </h1>
     <div class='buy-item-info'>
-      <%= image_tag @item.image, class: 'buy-item-img' %>
+    <% @item.images.each do |image|%>
+      <%= image_tag image, class: 'buy-item-img' %>
+    <% end %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
           <%= @item.product %>
