--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -31,7 +31,7 @@
 
     <%= form_with(model: @purchase_address, url: item_purchases_path, id: 'charge-form', class: 'transaction-form-wrap',local: true) do |f| %>
       <%= render 'shared/error_messages', model: f.object%>
-    <div class='credit-card-form'>
+    <!--div class='credit-card-form'>
       <h1 class='info-input-haedline'>
         クレジットカード情報入力
       </h1>
@@ -67,7 +67,7 @@
         </div>
         <%= f.text_field :cvc,class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
       </div>
-    </div>
+    </div-->
     
     <div class='shipping-address-form'>
       <h1 class='info-input-haedline'>
