--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,91 +1,107 @@
-<div class="AccountPage">
- <div class="AccountPage__title">
-   <h1>マイページ</h1>
- </div><br>
- <div class="Card__title">
-   <h2>カード情報</h2>
- </div>
- <div class="Card_info">
-   【カード番号】
-   <br>
-   <%= "**** **** **** " + @card[:last4] %>
-   <br>
-   【有効期限】
-   <br>
-   <%= @card[:exp_month] %>
-   /
-   <%= @card[:exp_year] %>
- </div>
- <div class="Account__info">
-   <h2>ユーザー情報</h2>
- </div>
- <div class="AccountPage__form">
-   <%= form_for(current_user) do |f| %>
-     <div class="FormField">
-       <div class="FormField__name">
-         <%= f.label :nickname %>
-       </div>
-       <div class="FormField__name">
-         <%= f.text_field :nickname, autofocus: true %>
-       </div>
-     </div>
-     <div class="FormField">
-       <div class="FormField__email">
-         <%= f.label :email %>
-       </div>
-       <div class="FormField__email">
-         <%= f.email_field :email %>
-       </div>
+<div class="items-sell-contents">
+  <header class="items-sell-header">
+    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
+  </header>
+  <div class="AccountPage">
+  <div class="AccountPage__title">
+    <h1>マイページ</h1>
+  </div><br>
+  <div class="Card__title">
+    <h2>【カード情報】</h2>
+  </div>
+  <div class="Card_info">
+    カード番号
+    <br>
+    <%= "**** **** **** " + @card[:last4] %>
+    <br>
+    有効期限
+    <br>
+    <%= @card[:exp_month] %>
+    /
+    <%= @card[:exp_year] %>
+  </div>
+  <div class="Account__info">
+    <h2>【ユーザー情報】</h2>
+  </div>
+  <div class="AccountPage__form">
+    <%= form_for(current_user) do |f| %>
       <div class="FormField">
-       <div class="FormField__password">
-         <%= f.label :password %>
-       </div>
-       <div class="FormField__password">
-         <%= f.text_field :password %>
-       </div>
-       <div class="FormField">
-       <div class="FormField__last_name">
-         <%= f.label :last_name %>
-       </div>
-       <div class="FormField__last_name">
-         <%= f.text_field :last_name %>
-       </div>
-       <div class="FormField">
-       <div class="FormField__first_name">
-         <%= f.label :first_name %>
-       </div>
-       <div class="FormField__first_name">
-         <%= f.text_field :first_name %>
-       </div>
-       <div class="FormField">
-       <div class="FormField__last_name_kana">
-         <%= f.label :last_name_kana %>
-       </div>
-       <div class="FormField__last_name_kana">
-         <%= f.text_field :last_name_kana %>
-       </div>
-       <div class="FormField">
-       <div class="FormField__first_name_kana">
-         <%= f.label :first_name_kana %>
-       </div>
-       <div class="FormField__first_name_kana">
-         <%= f.text_field :first_name_kana %>
-       </div>
-       <div class="FormField">
-       <div class="FormField__birthday">
-         <%= f.label :birthday %>
-       </div>
-       <div class="FormField__birthday">
-         <%= f.text_field :birthday %>
-       </div>
-     </div>
-       <br>
-     </div>
-     <%= f.submit "更新する" %>
-   <% end %>
-   <br>
-   <%= link_to "ログアウト", destroy_user_session_path, method: :delete%>
-   <br>
-   <%= link_to "トップページへ戻る", root_path%>
- </div>
-</div>
+        <div class="FormField__name">
+          <%= f.label :nickname %>
+        </div>
+        <div class="FormField__name">
+          <%= f.text_field :nickname, autofocus: true %>
+        </div>
+      </div>
+      <div class="FormField">
+        <div class="FormField__email">
+          <%= f.label :email %>
+        </div>
+        <div class="FormField__email">
+          <%= f.email_field :email %>
+        </div>
+        <div class="FormField">
+        <div class="FormField__password">
+          <%= f.label :password %>
+        </div>
+        <div class="FormField__password">
+          <%= f.text_field :password %>
+        </div>
+        <div class="FormField">
+        <div class="FormField__last_name">
+          <%= f.label :last_name %>
+        </div>
+        <div class="FormField__last_name">
+          <%= f.text_field :last_name %>
+        </div>
+        <div class="FormField">
+        <div class="FormField__first_name">
+          <%= f.label :first_name %>
+        </div>
+        <div class="FormField__first_name">
+          <%= f.text_field :first_name %>
+        </div>
+        <div class="FormField">
+        <div class="FormField__last_name_kana">
+          <%= f.label :last_name_kana %>
+        </div>
+        <div class="FormField__last_name_kana">
+          <%= f.text_field :last_name_kana %>
+        </div>
+        <div class="FormField">
+        <div class="FormField__first_name_kana">
+          <%= f.label :first_name_kana %>
+        </div>
+        <div class="FormField__first_name_kana">
+          <%= f.text_field :first_name_kana %>
+        </div>
+        <div class="FormField">
+        <div class="FormField__birthday">
+          <%= f.label :birthday %>
+        </div>
+        <div class="FormField__birthday">
+          <%= f.text_field :birthday %>
+        </div>
+      </div>
+         <br>
+      </div>
+      <%= f.submit "更新する" %>
+    <% end %>
+    <br>
+    <%= link_to "ログアウト", destroy_user_session_path, method: :delete%>
+    <br>
+    <%= link_to "トップページへ戻る", root_path%>
+  </div>
+  </div>
+
+<footer class="items-sell-footer">
+    <ul class="menu">
+      <li><a href="#">プライバシーポリシー</a></li>
+      <li><a href="#">フリマ利用規約</a></li>
+      <li><a href="#">特定商取引に関する表記</a></li>
+    </ul>
+    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
+    <p class="inc">
+      ©︎Furima,Inc.
+    </p>
+</footer>
