--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -81,29 +81,33 @@
 
   <div class="comment-box">
     <% if user_signed_in? %>
-      <%= form_with(model: [@item, @comment], url: item_comments_path(@item), local: true) do |f| %>
+      <%= form_with(model: [@item, @comment], url: item_comments_path(@item)) do |f| %>
         <%= f.text_area :text, class:"comment-text" %>
         <p class="comment-warn">
           相手のことを考え丁寧なコメントを心がけましょう。
           <br>
           不快な言葉遣いなどは利用制限や退会処分となることがあります。
         </p>
-        <% f.submit class:"comment-btn" %>
-        <button type="submit" class="comment-btn">
-          <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
+        <%# f.submit class:"comment-btn" %>
+        <%= f.button type:"submit", class:"comment-btn" do%>
+          <%= image_tag "comment.png", class:"comment-flag-icon" ,width:"20",height:"25"%>
           <span>コメントする<span>
+        <% end %>
       <% end %>
     <% else %>
       <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
     <% end %>
   </div>
-  <div class="comments">
+  <div class="comments", id="comments">
     <h4><コメント一覧></h4>
+
     <% @comments.each do |comment| %>
+    <div class="comment", id="comment">
       <p>
         <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>:</strong>
         <%= comment.text %>
       </p>
+    </div>
     <% end %>
   </div>
   <div class="links">
